// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioField should render correctly 1`] = `
<DocumentFragment>
  .cache-1rklbrw-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-1rklbrw-variantStyles[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1rklbrw-variantStyles .e1duuirp1[aria-checked='true'][aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #390171;
}

.cache-1rklbrw-variantStyles .e1duuirp1[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-1rklbrw-variantStyles .e1duuirp1:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1rklbrw-variantStyles .e1duuirp1:focus+.e1duuirp2 .e1duuirp3 {
  fill: #eeeeff;
}

.cache-1rklbrw-variantStyles .e1duuirp1[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1rklbrw-variantStyles .e1duuirp1[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp3 {
  fill: #ffe1e7;
}

.cache-1rklbrw-variantStyles:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1rklbrw-variantStyles:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 .e1duuirp3 {
  fill: #eeeeff;
}

.cache-1rklbrw-variantStyles:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1rklbrw-variantStyles:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 .e1duuirp3 {
  fill: #ffe1e7;
}

.cache-1rklbrw-variantStyles[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1rklbrw-variantStyles[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-1rklbrw-variantStyles[aria-disabled='true'] .e1duuirp2 .e1duuirp3 {
  fill: #f6f6f8;
}

.cache-nk0gna {
  opacity: 0.01;
  width: px;
  height: px;
  position: absolute;
  cursor: pointer;
}

.cache-7mg12z {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-7mg12z .e1duuirp3 {
  fill: #ffffff;
}

.cache-1e98oqk {
  fill: #ffffff;
}

<form
    novalidate=""
  >
    <label
      aria-disabled="false"
      class="e1duuirp0 e1g1zfwd0 cache-1rklbrw-variantStyles"
      for="test-test"
    >
      <input
        aria-checked="false"
        aria-disabled="false"
        aria-invalid="false"
        class="cache-nk0gna e1duuirp1"
        id="test-test"
        name="test"
        tabindex="0"
        type="radio"
        value="test"
      />
      <svg
        class="cache-7mg12z e1duuirp2"
        size="24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="8"
            stroke-width="2"
          />
          <circle
            class="cache-1e98oqk e1duuirp3"
            cx="12"
            cy="12"
            r="6"
          />
        </g>
      </svg>
      Radio field
    </label>
  </form>
</DocumentFragment>
`;

exports[`RadioField should render correctly checked 1`] = `
<DocumentFragment>
  .cache-1rklbrw-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-1rklbrw-variantStyles[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1rklbrw-variantStyles .e1duuirp1[aria-checked='true'][aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #390171;
}

.cache-1rklbrw-variantStyles .e1duuirp1[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-1rklbrw-variantStyles .e1duuirp1:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1rklbrw-variantStyles .e1duuirp1:focus+.e1duuirp2 .e1duuirp3 {
  fill: #eeeeff;
}

.cache-1rklbrw-variantStyles .e1duuirp1[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1rklbrw-variantStyles .e1duuirp1[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp3 {
  fill: #ffe1e7;
}

.cache-1rklbrw-variantStyles:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1rklbrw-variantStyles:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 .e1duuirp3 {
  fill: #eeeeff;
}

.cache-1rklbrw-variantStyles:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1rklbrw-variantStyles:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 .e1duuirp3 {
  fill: #ffe1e7;
}

.cache-1rklbrw-variantStyles[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1rklbrw-variantStyles[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-1rklbrw-variantStyles[aria-disabled='true'] .e1duuirp2 .e1duuirp3 {
  fill: #f6f6f8;
}

.cache-nk0gna {
  opacity: 0.01;
  width: px;
  height: px;
  position: absolute;
  cursor: pointer;
}

.cache-7mg12z {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-7mg12z .e1duuirp3 {
  fill: #ffffff;
}

.cache-1e98oqk {
  fill: #ffffff;
}

<form
    novalidate=""
  >
    <label
      aria-disabled="false"
      class="e1duuirp0 e1g1zfwd0 cache-1rklbrw-variantStyles"
      for="test-checked"
    >
      <input
        aria-checked="true"
        aria-disabled="false"
        aria-invalid="false"
        checked=""
        class="cache-nk0gna e1duuirp1"
        id="test-checked"
        name="test"
        tabindex="0"
        type="radio"
        value="checked"
      />
      <svg
        class="cache-7mg12z e1duuirp2"
        size="24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="8"
            stroke-width="2"
          />
          <circle
            class="cache-1e98oqk e1duuirp3"
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            cx="12"
            cy="12"
            r="4"
          />
        </g>
      </svg>
      Radio field checked
    </label>
  </form>
</DocumentFragment>
`;

exports[`RadioField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-1rklbrw-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-1rklbrw-variantStyles[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1rklbrw-variantStyles .e1duuirp1[aria-checked='true'][aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #390171;
}

.cache-1rklbrw-variantStyles .e1duuirp1[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-1rklbrw-variantStyles .e1duuirp1:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1rklbrw-variantStyles .e1duuirp1:focus+.e1duuirp2 .e1duuirp3 {
  fill: #eeeeff;
}

.cache-1rklbrw-variantStyles .e1duuirp1[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1rklbrw-variantStyles .e1duuirp1[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp3 {
  fill: #ffe1e7;
}

.cache-1rklbrw-variantStyles:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1rklbrw-variantStyles:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 .e1duuirp3 {
  fill: #eeeeff;
}

.cache-1rklbrw-variantStyles:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1rklbrw-variantStyles:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 .e1duuirp3 {
  fill: #ffe1e7;
}

.cache-1rklbrw-variantStyles[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1rklbrw-variantStyles[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-1rklbrw-variantStyles[aria-disabled='true'] .e1duuirp2 .e1duuirp3 {
  fill: #f6f6f8;
}

.cache-nk0gna {
  opacity: 0.01;
  width: px;
  height: px;
  position: absolute;
  cursor: pointer;
}

.cache-7mg12z {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-7mg12z .e1duuirp3 {
  fill: #ffffff;
}

.cache-1e98oqk {
  fill: #ffffff;
}

<form
    novalidate=""
  >
    <label
      aria-disabled="true"
      class="e1duuirp0 e1g1zfwd0 cache-1rklbrw-variantStyles"
      for="test-disabled"
    >
      <input
        aria-checked="false"
        aria-disabled="true"
        aria-invalid="false"
        class="cache-nk0gna e1duuirp1"
        disabled=""
        id="test-disabled"
        name="test"
        style="pointer-events: none;"
        type="radio"
        value="disabled"
      />
      <svg
        class="cache-7mg12z e1duuirp2"
        size="24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="8"
            stroke-width="2"
          />
          <circle
            class="cache-1e98oqk e1duuirp3"
            cx="12"
            cy="12"
            r="6"
          />
        </g>
      </svg>
      Radio field disabled
    </label>
  </form>
</DocumentFragment>
`;

exports[`RadioField should trigger events correctly 1`] = `
<DocumentFragment>
  .cache-1rklbrw-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-1rklbrw-variantStyles[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1rklbrw-variantStyles .e1duuirp1[aria-checked='true'][aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #390171;
}

.cache-1rklbrw-variantStyles .e1duuirp1[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-1rklbrw-variantStyles .e1duuirp1:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1rklbrw-variantStyles .e1duuirp1:focus+.e1duuirp2 .e1duuirp3 {
  fill: #eeeeff;
}

.cache-1rklbrw-variantStyles .e1duuirp1[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1rklbrw-variantStyles .e1duuirp1[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp3 {
  fill: #ffe1e7;
}

.cache-1rklbrw-variantStyles:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1rklbrw-variantStyles:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 .e1duuirp3 {
  fill: #eeeeff;
}

.cache-1rklbrw-variantStyles:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1rklbrw-variantStyles:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 .e1duuirp3 {
  fill: #ffe1e7;
}

.cache-1rklbrw-variantStyles[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1rklbrw-variantStyles[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-1rklbrw-variantStyles[aria-disabled='true'] .e1duuirp2 .e1duuirp3 {
  fill: #f6f6f8;
}

.cache-nk0gna {
  opacity: 0.01;
  width: px;
  height: px;
  position: absolute;
  cursor: pointer;
}

.cache-7mg12z {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-7mg12z .e1duuirp3 {
  fill: #ffffff;
}

.cache-1e98oqk {
  fill: #ffffff;
}

<form
    novalidate=""
  >
    <label
      aria-disabled="false"
      class="e1duuirp0 e1g1zfwd0 cache-1rklbrw-variantStyles"
      for="test-events"
    >
      <input
        aria-checked="true"
        aria-disabled="false"
        aria-invalid="false"
        class="cache-nk0gna e1duuirp1"
        id="test-events"
        name="test"
        tabindex="0"
        type="radio"
        value="events"
      />
      <svg
        class="cache-7mg12z e1duuirp2"
        size="24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="8"
            stroke-width="2"
          />
          <circle
            class="cache-1e98oqk e1duuirp3"
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            cx="12"
            cy="12"
            r="4"
          />
        </g>
      </svg>
      Radio field events
    </label>
  </form>
</DocumentFragment>
`;
